--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@langchain/qdrant": "^0.1.2",
     "bullmq": "^5.53.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "~4.21.2",
     "langchain": "^0.3.27",
     "multer": "^2.0.0",
