--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,10 @@
 services:
   valkey:
     image: valkey/valkey
-    ports: ["6379:6379"]
-    restart: unless-stopped
-
+    ports:
+      - 6379:6379      
+  
   qdrant:
     image: qdrant/qdrant
-    ports: ["6333:6333"]
-    volumes: [qdrant_data:/qdrant/storage]
-    restart: unless-stopped
-
-  server:
-    build: ./server
-    ports: ["8000:8000"]
-    volumes: ["./server/uploads:/app/uploads"]
-    environment:
-      NODE_ENV: production
-    depends_on: [valkey, qdrant]
-    restart: unless-stopped
-
-  client:
-    build: ./client
-    ports: ["5175:5175"]
-    depends_on: [server]
-    restart: unless-stopped
-
-volumes:
-  qdrant_data:
+    ports:
+      - 6333:6333
